--- a/templates/view.venuelist.temp.html
+++ b/templates/view.venuelist.temp.html
@@ -28,8 +28,10 @@
 		<div class="lunch-venue-wrapper">
 			<header class="lunch-venue-header">
 				<h2 class="lunch-venue-title" ng-click="goto('/venue/1')">{{venue.name}}</h2>
-				<span ng-show="venue.commentcount" class="lunch-venue-commentcount"><span class="lunch-venue-commentcount-arrow">&nbsp;</span>{{venue.commentcount}} Comments</span>
-				<a href="{{venue.url}}" class="lunch-fn-menu" target="blank">View Menu</a>
+				<div class="lunch-venue-info">
+					<span ng-show="venue.commentcount" class="lunch-venue-commentcount"><span class="lunch-venue-commentcount-arrow">&nbsp;</span>{{venue.commentcount}} Comments</span>
+					<a href="{{venue.url}}" class="lunch-fn-menu" target="blank">View Menu</a>
+				</div>
 			</header>
 
 			<div class="lunch-venue-guests" ng-show="venue.users">
