--- a/dev/sass/_util.vars.scss
+++ b/dev/sass/_util.vars.scss
@@ -18,6 +18,7 @@ $lunch-clr-grey-xxlgt: #f7f7f7;
 $lunch-clr-grey-xlgt: #eee;
 $lunch-clr-grey-lgt: #ddd;
 $lunch-clr-grey: #999;
+$lunch-clr-grey-drk: #666;
 
 $lunch-clr-blue: #00B9E7;
 $lunch-clr-blue-drk: #0083A3;
