--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -1,116 +1,130 @@
-<div class="lunch-view-venue">
-	
-	<header class="lunch-venue-header">
+<article class="lunch-view-venue">
+
+	<header>
 		<a ng-click="goto('/venues')" class="lunch-fn-back">
 			<span class="lunch-icon">B</span>
 			<span class="lunch-label">back</span>
 		</a>
-
-		<h1 class="lunch-venue-title">Scheidegger</h1>
+		<a ng-click="goto('/edit')" class="lunch-fn-edit">
+			<span class="lunch-icon">E</span>
+			<span class="lunch-label">edit</span>
+		</a>
+		<h1>Scheidegger</h1>
 	</header>
 
+	<section class="lunch-venue-reception">
+		<div class="lunch-venue-interaction">
+			<a class="lunch-fn-menu">
+				<span class="lunch-icon">M</span>
+				<span class="lunch-label">View Menu</span>
+			</a>
+			<a ng-hide="venue.attending" class="lunch-fn-attend">
+				<span class="lunch-icon">Y</span>
+				<span class="lunch-label">lunch here</span>
+			</a>
+			<a ng-show="venue.attending" href="" class="lunch-fn-quit">
+				<span class="lunch-icon">N</span>
+				<span class="lunch-label">Cancel</span>
+			</a>
+			<a class="lunch-fn-invite">
+				<span class="lunch-icon">I</span>
+				<span class="lunch-label">Invite</span>
+			</a>
+		</div>
 
-	<div class="lunch-venue-guests" >
-		<!-- <p class="lunch-venue-commentcount"><span class="lunch-venue-commentcount-arrow">&nbsp;</span>We plan to lunch here!</p> -->
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mk.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-		<div class="lunch-venue-guest anim-user-slide">
-			<img width="40" height="80" src="../static/img/mrz.png" alt="" class="lunch-user-image">
-			<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
-		</div>
-	</div>
-
-	<div class="lunch-venue-interaction">
-		<a class="lunch-fn-menu">
-			<span class="lunch-icon">N</span>
-			<span href="" class="lunch-label">View Menu</span>
-		</a>
-
-		<div ng-hide="venue.attending" class="lunch-fn-attend">
-			<!-- <span class="lunch-label">Lunch here</span> -->
-			<span class="lunch-icon">Y</span>
-			<span class="lunch-label">Go for Lunch here</span>
-		</div>
-		<a ng-show="venue.attending" href="" class="lunch-fn-quit">
-			<!-- <span class="lunch-label">Cancel</span> -->
-			<span class="lunch-icon">N</span>
-		</a>
-	</div>
-	<div class="lunch-comments">
-		
-		<div class="lunch-comments-list">
-			<div class="lunch-comment">
-				<div class="lunch-commentator">
-					<img width="40" height="80" src="../static/img/mk.png" alt="" class="lunch-user-image">
-				</div>
-				<p class="lunch-comment-content"><span class="lunch-comment-arrow">&nbsp;</span>Hey, was geht? Wann gehma?</p>
+		<div class="lunch-venue-guests" >
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
 			</div>
-
-			<div class="lunch-comment">
-				<div class="lunch-commentator">
-					<img width="40" height="80" src="../static/img/mrz.png" alt="" class="lunch-user-image">
-				</div>
-				<p class="lunch-comment-content"><span class="lunch-comment-arrow">&nbsp;</span>
-					Wir gehen ins Arts'n Boards. Da gibts Burger. Kommt lieber mit uns mit!</p>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
 			</div>
-
-
-			<form action="" class="lunch-comment lunch-comment-input">
-				<div class="lunch-commentator">
-					<img width="40" height="80" src="../static/img/mr.png" alt="" class="lunch-user-image">
-				</div>
-				<div class="lunch-comment-content">
-					<span class="lunch-comment-arrow">&nbsp;</span>
-					<textarea type="text" placeholder="Something to say?"></textarea>
-				
-					<div class="lunch-comment-interaction">
-						<a class="lunch-fn-comment-send">✓</a>
-						<a class="lunch-fn-comment-cancel">x</a>
-					</div>
-				</div>
-			</form>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mk.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
+			<div class="lunch-venue-guest anim-user-slide">
+				<img src="../static/img/mrz.png" alt="" class="lunch-user-image">
+				<p class="anim-status-fade ng-binding ng-hide" ng-show="user.status"></p>
+			</div>
 		</div>
-	</div>
-</div>
+	</section>
+
+	<section class="lunch-comments">
+		<div class="lunch-comment">
+			<div class="lunch-comment-info">
+				<div class="lunch-commentator-img">
+					<img src="../static/img/mk.png" alt="">
+				</div>
+				<time>11:35</time>
+				<h3>Smokey</h3>
+			</div>
+			<p>Hey, was geht? Wann gehma?</p>
+		</div>
+		<div class="lunch-comment">
+			<div class="lunch-comment-info">
+				<div class="lunch-commentator-img">
+					<img src="../static/img/mrz.png" alt="" class="lunch-user-image">
+				</div>
+				<time>11:58</time>
+				<h3>Marius</h3>
+			</div>
+			<p class="lunch-comment-content">Wir gehen ins Arts'n Boards. Da gibts Burger. Kommt lieber mit uns mit!</p>
+		</div>
+
+		<div class="lunch-comment">
+			<div class="lunch-comment-info">
+				<div class="lunch-commentator-img">
+					<img src="../static/img/kh.png" alt="" class="lunch-user-image">
+				</div>
+				<time>11:59</time>
+				<h3>Kristina</h3>
+			</div>
+			<p class="lunch-comment-content">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+		</div>
+
+		<form action="" class="lunch-comment lunch-comment-input">
+			<div class="lunch-commentator-img">
+				<img src="../static/img/mr.png" alt="" class="lunch-user-image">
+			</div>
+				<textarea type="text" placeholder="Got something to say?"></textarea>
+				<button class="lunch-fn-comment-send">
+					<span class="lunch-label">Post Comment</span>
+				</button>
+		</form>
+	</section>
+</article>
