--- a/templates/view.venuelist.html
+++ b/templates/view.venuelist.html
@@ -20,7 +20,7 @@
 
 			<div class="lunch-venue-guests" ng-show="venue.guests.length">
 				<div class="lunch-venue-guest anim-user-slide" ng-repeat="user in venue.guests">
-					<img src="{{user.ava}}" alt="" class="lunch-user-image" alt="{{user.nick}}">
+					<img src="{{user.ava}}" class="lunch-user-image" alt="{{user.nick}}">
 				</div>
 			</div>
 
