--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -50,7 +50,7 @@
 
 				<!-- Account (Add ctrl somewhere, or directive)-->
 				<div class="lunch-account">
-					<img src="{{details.user.img}}" alt="" class="lunch-account-image">
+					<img src="{{user.ava}}" alt="" class="lunch-account-image">
 					<div class="lunch-account-name">{{details.user.name}}</div>
 				</div>
 
