--- a/dev/sass/_ui.header.scss
+++ b/dev/sass/_ui.header.scss
@@ -505,11 +505,13 @@
 	/*
 	* New Venue Button
 	*/
-	.lunch-fn-new{
-		// Skin
-		color: $lunch-color-red-dark;
-		background: {
-			color: white;
+	&.active{
+		.lunch-fn-new{
+			// Skin
+			color: $lunch-color-red-dark;
+			background: {
+				color: white;
+			}
 		}
 	}
 }
