--- a/dev/sass/_ui.buttons.scss
+++ b/dev/sass/_ui.buttons.scss
@@ -30,10 +30,10 @@ $lunch-btn-rotate-hover: 360deg;
  */
 @mixin hoverrotate( $rotation ){
 	-moz-transform: rotate($rotation);  /* FF3.5+ */
-       -o-transform: rotate($rotation);  /* Opera 10.5 */
-  -webkit-transform: rotate($rotation);  /* Saf3.1+, Chrome */
-      -ms-transform: rotate($rotation);  /* IE9 */
-          transform: rotate($rotation);
+	-o-transform: rotate($rotation);  /* Opera 10.5 */
+	-webkit-transform: rotate($rotation);  /* Saf3.1+, Chrome */
+	-ms-transform: rotate($rotation);  /* IE9 */
+	transform: rotate($rotation);
 }
 
 
@@ -89,14 +89,14 @@ $lunch-btn-rotate-hover: 360deg;
 
 	// States
 	&:hover{
-		@include transition-duration( $lunch-time-over );
+		@include transition-duration( \$lunch-time-over );
 		background: {
 			color: transparent;
 		}
 		// Children
 		.lunch-icon {
-			@include hoverrotate( $lunch-btn-rotate-hover );
-			@include transition-duration( $lunch-time-over );
+			@include hoverrotate( \$lunch-btn-rotate-hover );
+			@include transition-duration( \$lunch-time-over );
 			background: {
 				color: $lunch-clr-grey;
 			}
@@ -173,7 +173,7 @@ $lunch-btn-rotate-hover: 360deg;
 
 	// Effects
 	@include transition-property( background-color border-color color );
-	@include transition-duration( $lunch-time-out );
+	@include transition-duration( \$lunch-time-out );
 
 
 	// Children
@@ -200,9 +200,9 @@ $lunch-btn-rotate-hover: 360deg;
 
 		// Effects
 		@include border-radius(34px);
-		@include hoverrotate( $lunch-btn-rotate-start );
-		@include transition-property( transform border-color background-color );
-		@include transition-duration( $lunch-time-out );
+/* 		@include hoverrotate( \$lunch-btn-rotate-start );
+@include transition-property( transform border-color background-color );
+@include transition-duration( \$lunch-time-out ); */
 	}
 
 
@@ -237,12 +237,12 @@ $lunch-btn-rotate-hover: 360deg;
 		}
 
 		// Effects
-		@include transition-duration( $lunch-time-over );
+/* 		@include transition-duration( \$lunch-time-over ); */
 
 		// Children
 		.lunch-icon {
-			@include hoverrotate( $lunch-btn-rotate-hover );
-			@include transition-duration( $lunch-time-over );
+/* 			@include hoverrotate( \$lunch-btn-rotate-hover ); */
+/* 			@include transition-duration( \$lunch-time-over ); */
 		}
 	}
 }
