--- a/templates/page.app.angular.html
+++ b/templates/page.app.angular.html
@@ -56,16 +56,13 @@
 
 				<ul class="lunch-nav-list">
 					<li class="lunch-nav-elem">
-						<a href="#/settings" class="lunch-fn-new">New Venue</a>
-					</li>
-					<li class="lunch-nav-elem">
 						<a href="#/venues" class="lunch-fn-xx">Venues</a>
 					</li>
 					<li class="lunch-nav-elem">
-						<a href="#/settings" class="lunch-fn-settings">Settings</a>
+						<a href="#/settings" class="lunch-fn-new">New Venue</a>
 					</li>
 					<li class="lunch-nav-elem">
-						<a href="/logout" class="lunch-fn-logout">Logout</a>
+						<a href="#/settings" class="lunch-fn-settings">Profile</a>
 					</li>
 				</ul>
 
