--- a/templates/view.venuedetail.html
+++ b/templates/view.venuedetail.html
@@ -34,7 +34,7 @@
 
 
 		<div class="lunch-venue-guests" ng-show="venue.guests.length">
-			<div class="lunch-venue-guest anim-user-slide" ng-repeat="user in venue.guests">
+			<div class="lunch-venue-guest lunch-animate" ng-repeat="user in venue.guests">
 				<img src="{{user.ava}}" class="lunch-user-image" alt="{{user.nick}}">
 			</div>
 		</div>
