--- a/dev/sass/_tmpl.venue.scss
+++ b/dev/sass/_tmpl.venue.scss
@@ -433,7 +433,7 @@ $venue-vertical-padding: 50px;
 .lunch-fn-quit {
 
 	// import
-	@extend .lunch-venue-btn;
+	@extend %lunch-round-btn;
 
 	// Box
 	margin: {
@@ -458,7 +458,6 @@ $venue-vertical-padding: 50px;
 	}
 
 	&:hover {
-
 		.lunch-icon{
 			background: {
 				color: $lunch-color-blu-dark;
@@ -481,7 +480,6 @@ $venue-vertical-padding: 50px;
 	}
 
 	&:hover {
-
 		.lunch-icon {
 			background: {
 				color: $lunch-color-red-dark;
