--- a/dev/sass/_ui.buttons.scss
+++ b/dev/sass/_ui.buttons.scss
@@ -5,40 +5,9 @@
 
 
 
-
-
-
-
-
-
 /*
  * Button Variables
  */
-$lunch-btn-rotate-start: 0deg;
-$lunch-btn-rotate-hover: 360deg;
-
-
-
-
-
-
-
-
-
-/*
- * Button Mixins
- */
-@mixin hoverrotate( $rotation ){
-	-moz-transform: rotate($rotation);  /* FF3.5+ */
-	-o-transform: rotate($rotation);  /* Opera 10.5 */
-	-webkit-transform: rotate($rotation);  /* Saf3.1+, Chrome */
-	-ms-transform: rotate($rotation);  /* IE9 */
-	transform: rotate($rotation);
-}
-
-
-
-
 
 
 
@@ -46,7 +15,6 @@ $lunch-btn-rotate-hover: 360deg;
 * Abstract round Button Styles
 */
 %lunch-round-btn {
-
 	// box
 	display: inline-block;
 	overflow: hidden;
@@ -81,9 +49,7 @@ $lunch-btn-rotate-hover: 360deg;
 		background: {
 			color: $lunch-clr-grey-lgt;
 		}
-
 		@include border-radius(34px);
-		@include hoverrotate( $lunch-btn-rotate-start );
 		@include transition-property( transform background-color );
 		@include transition-duration( $lunch-time-out );
 	}
@@ -102,7 +68,6 @@ $lunch-btn-rotate-hover: 360deg;
 		}
 		// child: icon
 		.lunch-icon {
-			@include hoverrotate( $lunch-btn-rotate-hover );
 			@include transition-duration( $lunch-time-over );
 			background: {
 				color: $lunch-clr-grey;
@@ -115,7 +80,6 @@ $lunch-btn-rotate-hover: 360deg;
 
 // abstract btn styles
 %lunch-venue-head-btn {
-
 	// box
 	display: block;
 	padding: 10px;
@@ -170,12 +134,11 @@ $lunch-btn-rotate-hover: 360deg;
  * General Lunch venue Button Styles
  */
 .lunch-venue-btn {
-
-	// Box
+	// box
 	display: block;
 	overflow: hidden;
 
-	// Skin
+	// skin
 	color: white;
 	background: {
 		color: transparent;
@@ -185,16 +148,13 @@ $lunch-btn-rotate-hover: 360deg;
 	text-align: center;
 	cursor: pointer;
 
-
-	// Effects
+	// effects
 	@include transition-property( background-color color );
 	@include transition-duration( $lunch-time-out );
 
-
-	// Children
+	// child: icon
 	.lunch-icon {
-
-		// Box
+		// box
 		padding: 10px;
 		border: {
 			width: 0;
@@ -205,24 +165,22 @@ $lunch-btn-rotate-hover: 360deg;
 		float: left;
 		position: relative;
 
-		// Skin
+		// skin
 		font: {
 			family: 'lunch-ico';
 			style: regular;
 			size: 30px;
 		}
 
-
-		// Effects
+		// effects
 		@include border-radius(34px);
-		@include hoverrotate( $lunch-btn-rotate-start );
 		@include transition-property( transform background-color );
 		@include transition-duration( $lunch-time-out );
 	}
 
-
+	// child: label
 	.lunch-label {
-		// Box
+		// box
 		display: block;
 		float: left;
 		height: 16px;
@@ -233,7 +191,7 @@ $lunch-btn-rotate-hover: 360deg;
 			left: 12px;
 		}
 
-		// Skin
+		// skin
 		font: {
 			family: Arial, sans-serif;
 			style: normal;
@@ -242,20 +200,19 @@ $lunch-btn-rotate-hover: 360deg;
 		color: inherit;
 	}
 
-	// States
+	// states
 	&:hover{
 
-		// Skin
+		// skin
 		background: {
 			color: transparent;
 		}
 
-		// Effects
+		// effects
 		@include transition-duration( $lunch-time-over );
 
-		// Children
+		// children
 		.lunch-icon {
-			@include hoverrotate( $lunch-btn-rotate-hover );
 			@include transition-duration( $lunch-time-over );
 		}
 	}
