--- a/templates/view.settings.html
+++ b/templates/view.settings.html
@@ -1,5 +1,32 @@
 <div class="lunch-view-settings">
-<h1>
-	Test: Settings
-</h1>
+
+	<section>
+		<h1>Username</h1>
+		<div>
+			<img src="" alt="profile picture">
+		</div>
+		<ul class="lunch-items">
+			<li class="lunch-item">item</li>
+			<li class="lunch-item">item</li>
+		</ul>
+	</section>
+
+	<section>
+		<label for="">Change Password</label>
+		<input type="text" name="old-password">
+		<input type="text" name="new-password">
+		<button type="submit" class="lunch-button">change password</button>
+	</section>
+
+	<section>
+		<p>
+			<input type="checkbox" id="lunch-overview">
+			<label for="lunch-overview">Send me an overview about what venues my collegues chose</label>
+		</p>
+		<p>
+			<input type="checkbox" id="lunch-remind">
+			<label for="lunch-remind">Remind me when to choose a venue</label>
+		</p>
+	</section>
+
 </div>
